--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
         android:theme="@style/Theme.GithubUser"
         tools:targetApi="31">
         <activity
+            android:name=".ui.splash.SplashScreen"
+            android:theme="@style/SplashScreen"
+            android:exported="true"
+            android:noHistory="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+        <activity
             android:name=".ui.detail.DetailUserActivity"
             android:exported="false" />
         <activity
