--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.GithubUser"
         tools:targetApi="31">
         <activity
+            android:name=".ui.settings.darkMode"
+            android:exported="false" />
+        <activity
             android:name=".ui.favorite.FavoriteActivity"
             android:exported="false" />
         <activity
